<resources>

    <string name="app_name">PingMe</string>
    <string name="app_description">Notification sample.</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="notification">Ping Notification</string>
    <string name="label">Ping Me</string>

    <!--  Buttons -->
    <string name="ping">Ping!</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>

    <!--  Text Views -->

    <string name="ping_text">Set Seconds Until Ping</string>
    <string name="done_snoozing">Done Snoozing.</string>
    <string name="seconds_default">10</string>
    <string name="reminder_label">Reminder Text</string>
    <string name="reminder_text">Don\'t forget!</string>

    <!-- Channels  -->
    <string name="channel_name">アラームとタイマー</string>
    <string name="channel_description">指定時間にアラームを起動する</string>

    <!--  Logging -->

    <string name="snoozing">Snoozing!</string>
    <string name="timer_start">Setting the timer</string>
    <string name="sleep_error">Sleep failure</string>
    <string name="timer_finished">Timer finished.</string>

</resources>