<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ping_text"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:id="@+id/seconds_view"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/edit_seconds" android:layout_centerHorizontal="true"
              android:layout_below="@+id/seconds_view" android:layout_marginTop="15dp"
              android:ems="10" android:text="@string/seconds_default"
              android:inputType="numberSigned" >
        <requestFocus />

    </EditText>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/reminder_view" android:layout_below="@+id/edit_seconds"
              android:layout_centerHorizontal="true" android:layout_marginTop="40dp"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:text="@string/reminder_label"/>
    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:id="@+id/edit_reminder" android:layout_marginTop="15dp"
              android:layout_below="@+id/reminder_view"
              android:layout_centerHorizontal="true" android:ems="10"
              android:text="@string/reminder_text" android:inputType="textMultiLine"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/ping_button" android:text="@string/ping"
            android:layout_centerHorizontal="true" android:layout_below="@+id/edit_reminder"
            android:layout_marginTop="25dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:onClick="onPingClick"/>

</RelativeLayout>